--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
 <script type="text/javascript" src="index.js"></script>
 <!--Cargar la API de google maps de forma Asincrona*/-->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDphGVfxEq0-P0a0Fn8SS7tijAeU0tYwss&libraries=geometry,visualization&callback=initMap&language=en">
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDphGVfxEq0-P0a0Fn8SS7tijAeU0tYwss&v=3&libraries=geometry,visualization&callback=initMap&language=en">
 </script>
 <!--Cargamos de ultimas el javascript para no interrumpir la carga de la pagina-->
 
